--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ textual = "^0.82.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
+pytest-lazy-fixtures = "^1.1.1"
 pre-commit = "^4.0.1"
 
 
